# phonk-finisher

./: CHANGELOG.md  CMakeLists.txt  README.md  TERMS.txt
Source/: FinisherLookAndFeel.h  FinisherProcessor.cpp  FinisherProcessor.h  PluginEditor.cpp
